# kleinanzeigen-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  deploy-rds.sh  docker-compose.prod.yml  docker-compose.rds.yml  docker-compose.yml  pyproject.toml
app/: config.py  jobs.py  main.py
app/agent/: chat.py  tools.py
app/analysis/: comparables.py  condition.py  criteria.py  judgment.py  pipeline.py  pricing.py  reliability_score.py  verdict.py
app/criteria/: loader.py
app/db/: models.py  session.py
app/knowledge/: builder.py  extraction.py  retrieval.py
app/llm/: bedrock.py  factory.py  gemini.py  logging.py  provider.py
app/scraping/: ingest.py  kleinanzeigen.py
app/services/: criteria.py  knowledge.py  listings.py
app/vehicles/: identity.py
app/web/: templating.py
docker/: app-entrypoint.sh
migrations/: env.py
migrations/versions/: 3eee634a1c76_add_buyer_criteria_profiles_and_.py  50f9532be7ea_drop_unused_vehicleidentity_power_kw.py  63b4f579d780_add_knowledge_research_runs.py  (+3 more)
tests/: test_agent_tools.py  test_comparables.py  test_condition_analysis.py  test_criteria_analysis.py  test_criteria_loader.py  test_criteria_web.py  test_health.py  test_ingest.py  test_jobs.py  test_judgment.py  test_kleinanzeigen_client.py  test_knowledge_builder.py  test_knowledge_retrieval.py  test_llm_bedrock.py  test_llm_factory.py  test_llm_gemini.py  test_pricing.py  test_reddit_source.py  test_reliability_score.py  test_services.py  test_vehicle_identity.py  test_verdict.py  test_web_search_source.py
(+16 files in other folders)
